change slider padding

--- a/layout.css
+++ b/layout.css
@@ -70,8 +70,8 @@
 		width:1300px;
 		height:600px;
 		overflow:hidden;
-		padding-left:130px;
-		padding-right:90px;
+		/*padding-left:130px;*/
+		/*padding-right:90px;*/
 	}
 	.slide-item{
 		width:1300px;
