--- a/layout.css
+++ b/layout.css
@@ -1,103 +1,131 @@
 /*stylesheet*/
 
-
-/*PC*/
-@media screen and (min-width: 767px) {
 	a{
 		text-decoration:none;
 	}
 	body{
-		font-family:"MS ゴシック";
-		background-color: rgba(193,0,41,1);
-			background-image:
-			linear-gradient(45deg, rgba(204,0,81,1) 25%, transparent 25%,
-			transparent 75%, rgba(204,0,81,1) 75%, rgba(204,0,81,1)),
-			linear-gradient(-45deg, rgba(204,0,81,1) 25%, transparent 25%,
-			transparent 75%, rgba(204,0,81,1) 75%, rgba(204,0,81,1));
-			background-size: 20px 20px;
-			background-position: 0 0, 10px 10px;
+		/*background-color:#ffdbff;*/
+		/*background:linear-gradient(to right,#e2c6ff,#ff89c4 35%,#ff8484 50%,);*/
+		/*2つ下*/
+		/*background:linear-gradient(to right,#e8d1ff,#ffa8d3 35%,#ff9e9e 50%,#ffedab);*/
+		/*下から6つ目の色*/
+		/*background:linear-gradient(to right,#efe0ff,#887c82 35%,#ffe0e0 50%,#ffefe0);*/	
+
+		/*下から8つ目の色*/
+		/*background:linear-gradient(to right,#ead6ff,#ffd6ea 35%,#ffd6d6 50%,#ffead6);*/
+
+		/*下から10つ目の色*/
+		background:linear-gradient(to right,#e5ccff,#ffcce5 35%,#ffcccc 50%,#ffe5cc);
 	}
 	
 	/*ヘッダー部分*/
-	.header{
+	.header-big{
 		height:90px;
-		background-color:pink;
+		/*background-color:pink;*/
+		width:100%;
 	}
-	.header-logo{
-		font-size:40px;
+	.header-logo-big{
+		font-size:50px;
 		float:left;
 		padding:20px 40px;
 	}
-	.header-logo a{
-		color:red;
+	.header-logo-big a{
+		color:#ff2893;
+		text-shadow: 3px 0 0 #f4eaff;
+		font-family:Comic Sans MS;
+		/*color:#ff2893;*/
+		/*color:#8e1eff;*/
 	}
-	.header p{
+	.header-big p{
 		color:red;
 		margin:0px;
 	}
-	.header-list li{
+	.header-list-big li{
 		float:right;
 		font-size:20px;
 		font-family:Comic Sans MS;
 		padding:33px 20px;
 		list-style:none;
 	}
-	
+	.header-list-big a{
+		font-family:Comic Sans MS;
+		color:#ff2893;
+		text-shadow: 3px 0 0 #f4eaff;
+	}
+	.header-list-big{
+		width:100%;
+	}
+	.header-small{
+		display: none;
+	}
 	/*ヘッダー部分終了*/
 	
 	
 	/*イントロ部分*/
 	.intro{
 		font-size:25px;
-		color:#FF367F;
+		color:#ff2893;
+		text-shadow: 3px 0 0 #f4eaff;
 		font-family:Comic Sans MS;
-		text-align:center;
-		background-color:#FFD5EC;
-		height:65px;
+		/*background-color:#FFD5EC;*/
+		width:100%;	
 		margin:0px 0px;
 	}
 	.intro p{
-		margin:0px;
-		padding-right:30px;
-		padding-top:14px;
+		text-align:center;
 	}
 	
 	/*イントロ部分終了*/
 	
 	
 	/*スライダー部分*/
-	.css-slider{
-		width:1300px;
-		height:600px;
+	.sliders{
+		/*
+		border-top:solid 5px blue;
+		border-bottom:solid 5px blue;
+		*/
+		widows:100%;
+		height:650px;
 		overflow:hidden;
-		padding-left:130px;
-		padding-right:90px;
-	}
-	.slide-item{
-		width:1300px;
-		height:600px;
-		float:left;
-		position:relative;
+		/*padding-left:130px;*/
+		/*padding-right:90px;*/
 	}
 	.slider-wrapper{
-		width:3000px;
+		width:300%;
 		position:relative;
 		left:0;
 		will-change:transform;
 		animation:slider 10s infinite;
 	}
-	
-	@keyframes slider{
-		0%{ transform:translateX(0);}
-		33%{ transform:translateX(-1000px);}
-		66%{ transform:translateX(-2000px);}
-		100%{ transform:translateX(0);}
+	.slide-item{
+		position:relative;
+		display: flex;
+		float:left;
+		margin:0px;
+		align-items: center;
 	}
 	
+	@keyframes slider{
+		0%{
+			transform:translateX(0);
+		}
+		33%{
+			transform:translateX(-1000px);
+		}
+		66%{
+			transform:translateX(-2000px);
+		}
+		100%{
+			transform:translateX(0);
+		}
+	}
+
+	#slider-small{
+		display:none;
+	}
+
 	/*スライダー部分終了*/
-	
-	
-	
+		
 	
 	/*検索部分*/
 	
@@ -107,12 +135,12 @@
 		text-align:center;
 		height:50px;
 		padding:25px;
+		border-top:solid 5px #ff2893;
+		border-bottom:solid 5px #ff2893;
 	}
 	.color-search{
-		background-color:white;
 		height:100px;
-		width:300px;
-		border-radius:10px;
+
 	}
 	
 	/*検索部分終了*/
@@ -129,129 +157,243 @@
 		margin-left:10px;
 	}
 	.color-item{
-		float:left;
-		margin:75px;
 		display:inline-block;
-		transform:rotate(5deg);
+		width:300px;
+		height:300px;
+		border:solid 1px black;
+		margin-left:5%;
+		margin-top:5%;
+		border-radius:50%;
+		
+	}
+	.color-item img{
+		height:200px;
+		width:200px;
+		/*margin:13% 19%;*/
+		margin-top:2%;
+		margin-left:34%;
+		border-radius: 5%;
+		border-radius:15%;
+		/*border:solid 3px black;*/
+		border-right:solid 1px black;
+		border-bottom:solid 1px black;
+	}
+	.main a{
+		color:black;
+	}
+	#redticket{
+		background:linear-gradient(140deg,#ff7f7f,white);
+	}
+	#pinkticket{
+		background:linear-gradient(140deg,#ff7fbf,white);
+	}
+	#orangeticket{
+		background:linear-gradient(140deg,#ffbf7f,white);
+	}
+	#yellowticket{
+		background:linear-gradient(140deg,#ffff7f,white);
+	}
+	#greenticket{
+		background:linear-gradient(140deg,#7fff7f,white);
+	}
+	#light-blueticket{
+		background:linear-gradient(140deg,#7fffff,white);
+	}
+	#blueticket{
+		background:linear-gradient(140deg,#7fbfff,white);
+	}
+	#purpleticket{
+		background:linear-gradient(140deg,#bf7fff,white);
+	}
+	#clothticket{
+		background:linear-gradient(140deg,#727272,white);
 	}
 	.color-item p{
 		margin:0px;
-		font-size:25px;
+		margin-top:17%;
+		margin-left:18%;
+		font-size:30px;
 		font-weight:bond;
 		font-family:Comic Sans MS;
-		text-align:center;
-		background-color:white;
-		border-right:10px solid yellow;
+		/*border-right:5px solid yellow;*/
+		width:150px;
+		float:left;
 	}
-	.color-item img{
+	.color-item h5{
+		font-size:30px;
+		font-weight:bond;
+		font-family:Comic Sans MS;
+		/*border-right:5px solid yellow;*/
+		width:150px;
+		float:left;
+		margin:0;
+		margin:40%;
+		margin-left:38%;
+	}
+	#red{
+
+		text-shadow: crimson 1px 0px 10px;
+		/*text-shadow: 1px 1px 2px crimson;*/
+	}
+	#pink{
+		text-shadow: deeppink 1px 0px 10px;
+	}
+	#orange{
+		text-shadow: darkorange 1px 0px 10px;
+	}
+	#yellow{
+		text-shadow:yellow 1px 0px 10px;
+	}
+	#green{
+		text-shadow:#228B22 1px 0px 10px;
+	}
+	#light-blue{
+		text-shadow:#00BFFF 1px 0px 10px;
+	}
+	#blue{
+		text-shadow:#1E90FF 1px 0px 10px;
+	}
+	#purple{
+		text-shadow:#9932CC 1px 0px 10px;
+	}
+	#cloth{
+		text-shadow:#525252 1px 0px 10px;
+	}
+	#blank{
 		height:250px;
-		width:250px;
-		border-radius:10px;
+		width:30px;
+		opacity:0.5;
 	}
-	
+
+
 	/*ペンキ画像部分終了*/
 	
 	
 	/*color-item-ヘッダー部分*/
 	
 	.header2{
-		background-color:#FFD5EC;
+		background-color:rgba(255,213,236,0.3);
 		margin:0px;
 		height:100px;
 	}
 	.header2 p{
-		color:#FF367F;
+		/*color:#ff2893;*/
 		font-family:"Comic Sans MS";
-		font-size:60px;
+		font-size:50px;
 		text-align:center;
-		height:100px;
-		width:200px;
-		margin-top:0px;
-		margin-bottom:0px;
-		margin-left:550px;
-		margin-right:350px;
 	}
+
 	
 	
 	/*color-itemヘッダー部分終了*/
-	
-	
-	
-	/*color-itemメイン部分*/
-	
-	.art-main{
-		background-color:#003300;
-		height:1000px;
-		margin:0px 40px;
-		border-left:10px solid yellow;
-		border-right:10px solid yellow;
-	}
-	
-	
-	/*color-itemメイン部分終了*/
-	
-	
+		
 	
 	/*絵の部分*/
 	
 	.art{
 		height:500px;
 	}
-	.art img{
-		height:350px;
-		width:350px;
+	.art-red img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(255,127,127,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-pink img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(255,127,255,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-orange img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(255,191,127,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-yellow img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(255,255,127,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-green img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(191,255,127,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-lightblue img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(127,255,255,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-blue img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(127,191,255,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-purple img{
+		/*height:350px;*/
+		/*width:350px;*/
+		float:left;
+		border:10px solid rgba(191,127,255,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+	.art-cloth img{
+		height:400px;
+		width:550px;
 		margin-top:35px;
-		margin-left:45px;
-		margin-right:35px;
+		margin-left:3%;
+		/*margin-right:35px;*/
 		margin-bottom:15px;
 		float:left;
-		border:10px solid #660000;
+		border:10px solid rgba(243,243,243,0.2);
 		box-shadow:10px 10px 15px -10px;
+	}
+	.gb{
+		background-color: white;
+		border:solid 3px palevioletred;
+		width:60px;
+		height:60px;
+		border-radius: 50%;
+		outline:none;
+
+	}
+	
+
+	#pigra{
+		height:350px;
+		width:350px;
 	}
 	
 	
 	/*絵の部分終了*/
 	
-	
-	/*絵の説明文*/
-	
-	.artdes{
-		float:left;
-		margin-top:45px;
-		margin-left:20px;
-		border:5px solid yellow;
-		padding:5px;
-		background-color:#003300;
-		border-radius:10px;
+	/*pink.html開始*/
+	.art-pink{
+		position:relative;
+		width:500px;
+		height:500px;
+		margin:5%;
 	}
-	.artdes p{
-		font-family:Comic Sans MS;
-		font-size:20px;
-		color:white;
+	#PigraGood{
+		position:absolute;
+		top:58%;
+		left:58%;
 	}
+
+	/*pink.html終了*/
 	
-	
-	/*絵の説明文終了*/
-	
-	
-	/*いいねボタン*/
-	
-	.good{
-		height:100px;
-		width:100px;
-		margin-left:130px;
-	}
-	button{
-		background-color:pink;
-		height:70px;
-		width:200px;
-		font-size:40px;
-		font-family:Comic Sans MS;
-		border-radius:30px;
-	}
-	
-	
-	/*いいねボタン終了*/
 	
 	
 	/*yellowの部分の2個目のネズミのイラスト*/
@@ -273,58 +415,187 @@
 	}
 	
 	/*greenの部分の1個目の電話のイラスト終了*/
+
+	/*guzzuのページ*/
+	#guzzu_main p{
+		text-align:center;
+		font-family:Comic Sans MS;
+		color:black;
+		font-size:30px;
+	}
+
+	/*guzzuのページ*/
 	
 	
 	/*aboutesitaのページ*/
 	
 	.about{
-		height:1000px;
-		background-color:#003300;
-		border-right:10px solid yellow;
-		border-left:10px solid yellow;
-		margin-right:50px;
-		margin-left:50px;
+		margin:0;
 	}
 	
 	.about p{
 		text-align:center;
 		font-family:Comic Sans MS;
-		color:white;
+		color:black;
 		font-size:30px;
 	}
 	
 	/*aboutesiteのページ終了*/
 
-}
+	/*footer部分開始*/
+	#footer{
+		background-color: #f9f4ff;
+		height:500px;
+	}
 
-/*smartphone*/
-@media screen and (max-width:767px) {
+	/*footer部分終了*/
 
+	/*orange.html開始*/
+	.art h3{
+		text-align:center;
+	}
+
+	/*orange.html終了*/
+
+
+	@media screen and (max-width:767px) {
+	
 	/*ヘッダー部分*/
-	.header{
+	.header-big{
+		display:none;
+	}
+	.header-small{
+		display:block;
 		height:90px;
-		background-color:pink;
+		/*background-color:pink;*/
+		width:100%;
 	}
-	.header-logo{
+	.header-logo-small{
 		font-size:40px;
-		float:left;
-		padding:20px 40px;
+		text-align:center;
 	}
-	.header-logo a{
-		color:red;
+	.header-logo-small a{
+		color:#ff2893;
+		/*color:#8e1eff;*/
 	}
-	.header p{
-		color:red;
+	.header-small p{
+		color:#ff2893;
 		margin:0px;
 	}
-	.header-list li{
-		float:right;
-		font-size:20px;
+	.header-list-small li{
+		font-size:10%;
+		margin:1% 5%;
 		font-family:Comic Sans MS;
-		padding:33px 20px;
+		/*padding:33px 20px;*/
 		list-style:none;
+		float:left;
+	}
+	.header-list-small a{
+		color:#ff2893;
+	}
+	#li-first{
+		margin-left:23%;
+	}
+
+	.header-list-small{
+		width:100%;
+	}
+	/*ヘッダー部分終了*/
+
+	/*イントロ部分*/
+	.intro{
+		width:100%;
+	}
+	.intro p{
+		font-size:5px;
+		text-align:center;
+	}
+
+	/*イントロ部分終了*/
+
+	/*スライダー部分開始*/
+
+	#slider-big{
+		display:none;
+	}
+
+	#slider-small{
+		display:block;
+	}
+	#slider-small img{
+		width:100%;
+	}
+
+
+	/*スライダー部分終了*/
+
+
+
+	/*カラー選択部分開始*/
+	.color-item{
+		display:inline-block;
+		width:200px;
+		height:200px;
+		/*border:solid 3px blue;*/
+		margin-left:10%;
+		margin-top:5%;
+		border-radius:50%;
+	}
+	.color-item img{
+		height:130px;
+		width:130px;
+		/*margin:13% 19%;*/
+		margin-top:2%;
+		margin-left:34%;
+		border-radius: 5%;
+		border-radius:15%;
+	}
+	.color-item p{
+		margin:0px;
+		margin-top:17%;
+		margin-left:18%;
+		font-size:20px;
+		font-weight:bond;
+		font-family:Comic Sans MS;
+		/*border-right:5px solid yellow;*/
+		width:150px;
+		float:left;
+	}
+	/*カラー選択部分終了*/
+
+	/*aboutesitaのページ*/	
+	.about p{
+		text-align:center;
+		font-family:Comic Sans MS;
+		color:black;
+		font-size:15px;
 	}
 	
-	/*ヘッダー部分終了*/
+	/*aboutesiteのページ終了*/
+
+
+	/*各作品サイズ開始*/
+	#pigra{
+		height:350px;
+		width:350px;
+	}
+
+	.art-cloth img{
+		height:400px;
+		width:550px;
+		margin-top:35px;
+		margin-left:3%;
+		/*margin-right:35px;*/
+		margin-bottom:15px;
+		float:left;
+		border:10px solid rgba(243,243,243,0.2);
+		box-shadow:10px 10px 15px -10px;
+	}
+
+
+
+	/*各作品サイズ終了*/
+
+
 
 }
