--- a/layout.css
+++ b/layout.css
@@ -158,17 +158,16 @@
 	}
 	.color-item{
 		display:inline-block;
-		width:300px;
-		height:300px;
+		width:400px;
+		height:400px;
 		border:solid 1px black;
-		margin-left:7%;
-		margin-top:5%;
+		margin:3.3%;
 		border-radius:50%;
 		
 	}
 	.color-item img{
-		height:200px;
-		width:200px;
+		height:70%;
+		width:70%;
 		/*margin:13% 19%;*/
 		margin-top:2%;
 		margin-left:34%;
@@ -496,146 +495,3 @@
 	}
 
 	/*orange.html終了*/
-
-
-	@media screen and (max-width:767px) {
-	
-	/*ヘッダー部分*/
-	.header-big{
-		display:none;
-	}
-	.header-small{
-		display:block;
-		height:90px;
-		/*background-color:pink;*/
-		width:100%;
-	}
-	.header-logo-small{
-		font-size:40px;
-		text-align:center;
-	}
-	.header-logo-small a{
-		color:#ff2893;
-		/*color:#8e1eff;*/
-	}
-	.header-small p{
-		color:#ff2893;
-		margin:0px;
-	}
-	.header-list-small li{
-		font-size:10%;
-		margin:1% 5%;
-		font-family:Comic Sans MS;
-		/*padding:33px 20px;*/
-		list-style:none;
-		float:left;
-	}
-	.header-list-small a{
-		color:#ff2893;
-	}
-	#li-first{
-		margin-left:23%;
-	}
-
-	.header-list-small{
-		width:100%;
-	}
-	/*ヘッダー部分終了*/
-
-	/*イントロ部分*/
-	.intro{
-		width:100%;
-	}
-	.intro p{
-		font-size:5px;
-		text-align:center;
-	}
-
-	/*イントロ部分終了*/
-
-	/*スライダー部分開始*/
-
-	#slider-big{
-		display:none;
-	}
-
-	#slider-small{
-		display:block;
-	}
-	#slider-small img{
-		width:100%;
-	}
-
-
-	/*スライダー部分終了*/
-
-
-
-	/*カラー選択部分開始*/
-	.color-item{
-		display:inline-block;
-		width:200px;
-		height:200px;
-		/*border:solid 3px blue;*/
-		margin-left:10%;
-		margin-top:5%;
-		border-radius:50%;
-	}
-	.color-item img{
-		height:130px;
-		width:130px;
-		/*margin:13% 19%;*/
-		margin-top:2%;
-		margin-left:34%;
-		border-radius: 5%;
-		border-radius:15%;
-	}
-	.color-item p{
-		margin:0px;
-		margin-top:17%;
-		margin-left:18%;
-		font-size:20px;
-		font-weight:bond;
-		font-family:Comic Sans MS;
-		/*border-right:5px solid yellow;*/
-		width:150px;
-		float:left;
-	}
-	/*カラー選択部分終了*/
-
-	/*aboutesitaのページ*/	
-	.about p{
-		text-align:center;
-		font-family:Comic Sans MS;
-		color:black;
-		font-size:15px;
-	}
-	
-	/*aboutesiteのページ終了*/
-
-
-	/*各作品サイズ開始*/
-	#pigra{
-		height:350px;
-		width:350px;
-	}
-
-	.art-cloth img{
-		height:400px;
-		width:550px;
-		margin-top:35px;
-		margin-left:3%;
-		/*margin-right:35px;*/
-		margin-bottom:15px;
-		float:left;
-		border:10px solid rgba(243,243,243,0.2);
-		box-shadow:10px 10px 15px -10px;
-	}
-
-
-
-	/*各作品サイズ終了*/
-
-
-
-}
