--- a/layout.css
+++ b/layout.css
@@ -464,7 +464,7 @@ body{
 	float:left;
 	display: flex;	
 }
-.art-img{
+.art-red img{
 	height:30vw;
 	width:45vw;
 	margin:2vw;
@@ -617,7 +617,7 @@ body{
 /*blue.html終了*/
 
 /*purple.html*/
-.art-puple{
+.art-purple{
 	height:32vw;
 	width:100%;
 	/* margin:3vw; */
@@ -626,7 +626,7 @@ body{
 	float:left;
 	display: flex;		
 }
-.art-puple img{
+.art-purple img{
 	height:30vw;
 	width:45vw;
 	margin:2vw;
