--- a/layout.css
+++ b/layout.css
@@ -142,6 +142,17 @@ body{
 
 
 /*スライダー部分終了*/
+
+/*news部分*/
+.news_part{
+    background-color:rgba(255, 255,255,0.3);
+}
+.news_part p{
+    text-align: center;
+    color:#ff2893;
+    font-size: 2vw;
+}
+/*news部分終了*/
 	
 
 /*検索部分*/
